--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: crypto_coins_rates
-description: A new Flutter application.
+name: zadarma_api_flutter
+description: A zadarma Api flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -21,13 +21,13 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  shared_preferences: ^0.5.8
-  encrypted_shared_preferences: ^1.0.5
+  shared_preferences: any
+  encrypted_shared_preferences: any
   flutter:
     sdk: flutter
 
   #### http: any
-  crypto: ^2.1.5
+  crypto: any
   ###http_middleware: any
   ###http_logger: any
   ###dio: any
@@ -36,7 +36,7 @@ dependencies:
   url_launcher: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: any
 
 dev_dependencies:
   flutter_test:
